<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.logic.tech.chatapp.RegisterActivity">
    <include layout="@layout/app_bar_layout"
        android:id="@+id/register_page_toolbar"/>

    <TextView
        android:id="@+id/new_acct_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_page_toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/new_acct_title"
        android:layout_alignStart="@+id/new_acct_title">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/displayName"
        android:layout_alignStart="@+id/new_acct_title">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/reg_email"
        android:layout_alignStart="@+id/reg_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/reg_password"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="21dp"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:text="@string/create_account"
        android:textColor="@android:color/white" />
</RelativeLayout>
