<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
tools:context="com.logic.tech.chatapp.LoginActivity">

<include layout="@layout/app_bar_layout"
    android:id="@+id/login_page_toolbar"/>

     <TextView
         android:id="@+id/login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_page_toolbar"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
         android:text="@string/login_into_your_account"
         android:textColor="@android:color/black"
         android:textSize="20sp" />


<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:layout_below="@+id/login_title"
    android:id="@+id/reg_email"
    android:layout_alignStart="@+id/login_title">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:id="@+id/reg_password"
    android:layout_below="@+id/reg_email"
    android:layout_alignStart="@+id/reg_email">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
</android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/reg_password"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="21dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@android:color/white" />
</RelativeLayout>
